# Sentinel-SLM

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CONTRIBUTING.md  DATACARD.md  LICENSE  Makefile  README.md  README.txt  full_plan.md  pyproject.toml  requirements.txt
.serena/: project.yml
.serena/memories/: codebase_structure.md  project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md
configs/: rail_a.json
demo/: Dockerfile.api  Dockerfile.ui  api.py  app.py  config.py  dashboard.py  docker-compose.yml  requirements-api.txt  requirements-ui.txt
docs/: 00_introduction.md  01_architecture.md  02_installation_usage.md  03_dataset_taxonomy.md  04_training_results.md  05_contributing.md  architecture.md  multilingual_research.md  taxonomy.md  training_results.md  usage_guide.md
notebooks/: 01_data_preparation.ipynb  02_synthetic_inspection.ipynb  03_eda.ipynb  04_train_rail_a.ipynb  05_test_rail_a.ipynb  08_train_rail_b.ipynb
notebooks/data/raw/: jailbreak_bench.parquet
scripts/: audit_data.py  check_model.py  download_data.py  download_extra.py  enrich_language.py  extract_metrics.py  finalize_rail_a.py  generate_synthetic.py  inspect_data.py  inspect_jailbreak.py  inspect_keys.py  inspect_rail_a.py  map_labels.py  merge_synthetic.py  prepare_rail_a_data.py  prepare_rail_a_external.py  prepare_rail_b_data.py  run_pipeline.py  test_openrouter.py  update_rail_b_readme.py  upload_rail_a_to_hub.py  upload_rail_b_to_hub.py  verify_mapping_detailed.py
src/utils/: taxonomy.py
(+7 files in other folders)
